--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "10.1.x",
+    "npm": "6.14.x"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
